<resources>
    <string name="app_name">ScheduleMg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ScheduleMg</string>
    <string name="nav_header_subtitle">Your scheduling management application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_all">All Tasks</string>
    <string name="menu_todo">To Do</string>
    <string name="menu_inprogress">In Progress</string>
    <string name="menu_finished">Finished</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="status">Status</string>
    <string name="errorAll">No tasks at the moment.</string>
    <string name="errorToDo">No tasks to do at the moment.</string>
    <string name="errorInProgress">No tasks in progress at the moment.</string>
    <string name="errorFinished">No tasks finished at the moment.</string>
    <string name="menu_list">All tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About\n</string>
    <string name="point">**</string>
    <string name="dateError">Invalid date</string>
    <string name="startTimeError">Invalid start time</string>
    <string name="endTimeError">End time must be after start time</string>
    <string name="descriptionError">Descriptions are required</string>
    <string name="titleError">Title is required</string>
    <string name="search">Search by Date</string>
    <string name="schedulemg_icon">ScheduleMg Icon</string>
    <string name="descriptionScheduleMg">ScheduleMg is a comprehensive scheduling application designed to help you manage your tasks every day.</string>
    <string name="dateApp">January 2025</string>
    <string name="copyright">© Randriamanampisoa Mamy Dinyah</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="email">Email</string>
    <string name="this_week">This Week</string>
    <string name="last_week">Last Week</string>
    <string name="next_week">Next Week</string>
    <string name="all">All</string>
    <string name="today">Tasks For Today</string>
    <string name="motivation">ScheduleMg</string>
    <string name="total">Total Tasks</string>
    <string name="today_task_count">%1$d</string>
<string name="total_task_count">%1$d</string>
</resources>