<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_close_24"
        android:contentDescription="@string/close"
        app:tint="@color/icon_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonClose"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text" />

        <TextView
            android:id="@+id/titleError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_clock"
            android:visibility="gone"
            android:text="@string/titleError" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text" />

        <TextView
            android:id="@+id/descriptionError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_clock"
            android:visibility="gone"
            android:text="@string/descriptionError" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:focusable="false"
            android:clickable="true"
            android:drawableEnd="@drawable/baseline_event_24" />

        <TextView
            android:id="@+id/dateError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_clock"
            android:visibility="gone"
            android:text="@string/dateError" />

        <EditText
            android:id="@+id/editTextStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startTime"
            android:focusable="false"
            android:clickable="true"
            android:drawableEnd="@drawable/baseline_schedule_24" />


        <TextView
            android:id="@+id/startTimeError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_clock"
            android:visibility="gone"
            android:text="@string/startTimeError" />

        <EditText
            android:id="@+id/editTextEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endTime"
            android:text="@string/endTime"
            android:focusable="false"
            android:clickable="true"
            android:drawableEnd="@drawable/baseline_schedule_24" />

        <TextView
            android:id="@+id/endTimeError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_clock"
            android:visibility="gone"
            android:text="@string/endTimeError" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
