<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/scheduly"
        android:contentDescription="@string/schedulemg_icon"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionScheduleMg"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:lineSpacingExtra="4dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateApp"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="14sp"
        android:paddingBottom="16dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:spacing="16dp"
        android:paddingTop="16dp">

        <ImageButton
            android:id="@+id/buttonFacebook"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitCenter"
            android:onClick="openFacebook" />

        <ImageButton
            android:id="@+id/buttonWhatsApp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/whatsapp"
            android:contentDescription="@string/whatsapp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitCenter"
            android:onClick="openWhatsApp" />

        <ImageButton
            android:id="@+id/buttonEmail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/gmail"
            android:contentDescription="@string/email"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:onClick="openEmail" />
    </LinearLayout>

</LinearLayout>
